--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,70 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title></title>
+    <title>Swype Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/swype.css" rel="stylesheet">
 </head>
 <body>
-
+<div class="container-fluid swype-nav-bg">
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="swype-nav">
+                <a href="#"><i class="icon-home"></i></a>
+                <a href="#"><i class="icon-road"></i></a>
+                <a href="#"><i class="icon-list"></i></a>
+                <a href="#"><i class="icon-pencil"></i></a>
+                <a href="#"><i class="icon-book"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="swype-container">
+                <div id="swyper" class="swype-body">
+                    <div class="swype-panel">
+                        <h1>Crazy Panel 1</h1>
+                        <blockquote>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
+                            <small>Someone famous in <cite title="">Body of work</cite></small>
+                        </blockquote>
+                        <a href="#" class="thumbnail">
+                            <div class="swype-image-thumb">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swype-panel">
+                        <h1>Crazy Panel 2</h1>
+                        <blockquote>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
+                            <small>Someone famous in <cite title="">Body of work</cite></small>
+                        </blockquote>
+                        <a href="#" class="thumbnail">
+                            <div class="swype-image-thumb">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swype-panel">
+                        <h1>Crazy Panel 3</h1>
+                        <blockquote>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
+                            <small>Someone famous in <cite title="">Body of work</cite></small>
+                        </blockquote>
+                        <a href="#" class="thumbnail">
+                            <div class="swype-image-thumb">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/swype.js"></script>
 </body>
 </html>
