--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Swype Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/swype.css" rel="stylesheet">
 </head>
@@ -64,6 +64,7 @@
     </div>
 </div>
 <script src="js/jquery.js"></script>
+<script src="js/jquery.mobile.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/swype.js"></script>
 </body>
