modernizr and get touchy!

--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,7 @@
         </div>
     </div>
 </div>
+<script src="js/modernizr.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/jquery.mobile.js"></script>
 <script src="js/bootstrap.js"></script>
