sliding with button!

--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,11 @@
     <div class="row-fluid">
         <div class="span12">
             <div class="swype-nav">
-                <a href="#"><i class="icon-home"></i></a>
-                <a href="#"><i class="icon-road"></i></a>
-                <a href="#"><i class="icon-list"></i></a>
-                <a href="#"><i class="icon-pencil"></i></a>
-                <a href="#"><i class="icon-book"></i></a>
+                <a href="javascript:slide(0);"><i class="icon-home"></i></a>
+                <a href="javascript:slide(1);"><i class="icon-road"></i></a>
+                <a href="javascript:slide(2);"><i class="icon-list"></i></a>
+                <a href="javascript:slide(3);"><i class="icon-pencil"></i></a>
+                <a href="javascript:slide(4);"><i class="icon-book"></i></a>
             </div>
         </div>
     </div>
@@ -58,6 +58,28 @@
                             </div>
                         </a>
                     </div>
+                    <div class="swype-panel">
+                        <h1>Crazy Panel 4</h1>
+                        <blockquote>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
+                            <small>Someone famous in <cite title="">Body of work</cite></small>
+                        </blockquote>
+                        <a href="#" class="thumbnail">
+                            <div class="swype-image-thumb">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swype-panel">
+                        <h1>Crazy Panel 5</h1>
+                        <blockquote>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
+                            <small>Someone famous in <cite title="">Body of work</cite></small>
+                        </blockquote>
+                        <a href="#" class="thumbnail">
+                            <div class="swype-image-thumb">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,7 +87,6 @@
 </div>
 <script src="js/modernizr.js"></script>
 <script src="js/jquery.js"></script>
-<script src="js/jquery.mobile.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/swype.js"></script>
 </body>
