--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,11 @@
     <div class="row-fluid">
         <div class="span12">
             <div class="swype-nav">
-                <a href="javascript:slide(0);"><i class="icon-home"></i></a>
-                <a href="javascript:slide(1);"><i class="icon-road"></i></a>
-                <a href="javascript:slide(2);"><i class="icon-list"></i></a>
-                <a href="javascript:slide(3);"><i class="icon-pencil"></i></a>
-                <a href="javascript:slide(4);"><i class="icon-book"></i></a>
+                <a href="javascript:$('#swyper').swype('slide', 0);"><i class="icon-home"></i></a>
+                <a href="javascript:$('#swyper').swype('slide', 1);"><i class="icon-road"></i></a>
+                <a href="javascript:$('#swyper').swype('slide', 2);"><i class="icon-list"></i></a>
+                <a href="javascript:$('#swyper').swype('slide', 3);"><i class="icon-pencil"></i></a>
+                <a href="javascript:$('#swyper').swype('slide', 4);"><i class="icon-book"></i></a>
             </div>
         </div>
     </div>
@@ -31,10 +31,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
                             <small>Someone famous in <cite title="">Body of work</cite></small>
                         </blockquote>
-                        <a href="#" class="thumbnail">
-                            <div class="swype-image-thumb">
-                            </div>
-                        </a>
+                        <div class="swype-image-thumb">
+                        </div>
                     </div>
                     <div class="swype-panel">
                         <h1>Crazy Panel 2</h1>
@@ -42,10 +40,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
                             <small>Someone famous in <cite title="">Body of work</cite></small>
                         </blockquote>
-                        <a href="#" class="thumbnail">
-                            <div class="swype-image-thumb">
-                            </div>
-                        </a>
+                        <div class="swype-image-thumb">
+                        </div>
                     </div>
                     <div class="swype-panel">
                         <h1>Crazy Panel 3</h1>
@@ -53,10 +49,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
                             <small>Someone famous in <cite title="">Body of work</cite></small>
                         </blockquote>
-                        <a href="#" class="thumbnail">
-                            <div class="swype-image-thumb">
-                            </div>
-                        </a>
+                        <div class="swype-image-thumb">
+                        </div>
                     </div>
                     <div class="swype-panel">
                         <h1>Crazy Panel 4</h1>
@@ -64,10 +58,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
                             <small>Someone famous in <cite title="">Body of work</cite></small>
                         </blockquote>
-                        <a href="#" class="thumbnail">
-                            <div class="swype-image-thumb">
-                            </div>
-                        </a>
+                        <div class="swype-image-thumb">
+                        </div>
                     </div>
                     <div class="swype-panel">
                         <h1>Crazy Panel 5</h1>
@@ -75,10 +67,8 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis.</p>
                             <small>Someone famous in <cite title="">Body of work</cite></small>
                         </blockquote>
-                        <a href="#" class="thumbnail">
-                            <div class="swype-image-thumb">
-                            </div>
-                        </a>
+                        <div class="swype-image-thumb">
+                        </div>
                     </div>
                 </div>
             </div>
